# docs/openapi.yaml
@@ -68,10 +68,10 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/CrearCaptura'
-          application/x-www-form-urlencoded:
+          multipart/form-data:
             schema:
               $ref: '#/components/schemas/CrearCaptura'
-          multipart/form-data:
+          application/x-www-form-urlencoded:
             schema:
               $ref: '#/components/schemas/CrearCaptura'
         required: true
@@ -1661,10 +1661,13 @@ components:
           nullable: true
         texto:
           type: string
+        audio:
+          type: string
+          format: binary
+          writeOnly: true
       required:
       - clave_idempotencia
       - proforma
-      - texto
     CrearProforma:
       type: object
       properties:
